--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body, h1,h2,h3,h4,h5,h6,ul {
     color: var(--white);
     padding: 16px 30px;
     border: 0px;
+    font-size: 14px;
     font-weight: 700;
     align-self: center;
     margin-top: 10px;
