--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: rgb(21, 20, 32); */
+    background-color: rgb(36, 35, 51);
 }
 body, h1,h2,h3,h4,h5,h6,ul {
     margin: 0;
@@ -27,11 +27,15 @@ body, h1,h2,h3,h4,h5,h6,ul {
 .green {
     color: var(--green);
 }
-
+input {
+    border-radius: var(--borderRadius);
+    height: 50px;
+    border: 2px solid #ddd;
+}
 
 #app {
     width: 375px;
-    box-shadow: 0 0 20px 0px rgb(230, 230, 240);
+    box-shadow: 0 0 20px 0px rgb(0, 0, 0);
     max-width: 375px;
     height: 100%;
     background: var(--white);
@@ -44,11 +48,48 @@ body, h1,h2,h3,h4,h5,h6,ul {
     display: flex;
     flex-direction: column;
 }
-.logo {
+.landing_logo {
     color: var(--green);
     font-weight: 900;
     width: 100%;
+    text-align: center;
+    font-size: 54px;
     margin-bottom: 20px;
+    display: flex;
+}
+.landing_logo__userfu {
+    clip-path: polygon(0px 0px, 100% 0px, 87% 100%, 0px 100%);
+    position: relative;
+    left: 0;
+    z-index: 1;
+    padding-right: 30px;
+    margin-right: -30px;
+}
+.landing_logo__inx {
+    clip-path: polygon(22% 0px, 100% 0px, 100% 100%, 0px 100%);
+    position: relative;
+    z-index: 1;
+    padding-left: 30px;
+    margin-left: -30px;
+}
+.landing_logo__userfu .landing_logo__inner {
+    display: block;
+    transform: translateX(150%);
+    animation: landing_userfu 0.5s 0.5s forwards;
+}
+.landing_logo__inx .landing_logo__inner {
+    display: block;
+    transform: translateX(-150%);
+    animation: landing_userfu 0.5s 0.5s forwards;
+}
+@keyframes landing_userfu {
+    100% {
+        transform: translateX(0);
+    }
+}
+.landing_logo__slashes {
+    position: relative;
+    z-index: 2;
 }
 .landing_title {
     font-weight: 900;
@@ -111,8 +152,10 @@ body, h1,h2,h3,h4,h5,h6,ul {
     margin-bottom: 10px;
     background-size: 1000px;
     background-position: 0px 0px;
-    animation: button_background 3s linear infinite forwards;
+    animation: button_background 3s linear infinite forwards, landing_subtitle 0.3s forwards;;
     cursor: pointer;
+    opacity: 0;
+    transform: scale(0.8);
 }
 .landing_button__signup {
     background-image: linear-gradient(90deg, var(--red), var(--blue), var(--red));
@@ -131,4 +174,85 @@ body, h1,h2,h3,h4,h5,h6,ul {
 }
 .landing_button:hover {
     animation-duration: 0.5s;
+}
+.landing_title__save, .landing_title__group, .landing_title__signup, .landing_title__login{
+    animation: landing_subtitle 0.3s forwards;
+    opacity: 0;
+    transform: scale(0.8);
+}
+.landing_title__save {
+    animation-delay: 1.2s;
+}
+.landing_title__group {
+    animation-delay: 1.6s;
+}
+.landing_title__signup {
+    animation-delay: 2.4s;
+}
+.landing_button__signup {
+    animation-delay: 3.1s;
+}
+.landing_title__login {
+    animation-delay: 3.5s;
+}
+.landing_button__login {
+    animation-delay: 3.7s;
+}
+@keyframes landing_subtitle{
+    0% {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+
+
+
+
+.landing_line__first {
+    stroke-dasharray: 200px;
+    stroke-dashoffset: 200px;
+    animation: landing_line__first 1s 1.4s forwards;
+}
+@keyframes landing_line__first {
+    100% {
+        stroke-dashoffset: 0;
+    }
+}
+
+.landing_line__second {
+    stroke-dasharray: 310px;
+    stroke-dashoffset: 310px;
+    animation: landing_line__first 1s 1.8s forwards;
+}
+@keyframes landing_line__second {
+    100% {
+        stroke-dashoffset: 0;
+    }
+}
+
+.landing_line__third {
+    stroke-dasharray: 170px;
+    stroke-dashoffset: 170px;
+    animation: landing_line__third 1s 2.5s forwards;
+}
+@keyframes landing_line__third {
+    100% {
+        stroke-dashoffset: 0;
+    }
+}
+
+.landing_line__fourth {
+    stroke-dasharray: 100px;
+    stroke-dashoffset: 100px;
+    animation: landing_line__fourth 0.8s 3.2s forwards;
+}
+@keyframes landing_line__fourth {
+    100% {
+        stroke-dashoffset: 0;
+    }
 }
